--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,16 @@
 {
-    "name": "markdi/markdi",
+    "name": "markdi\/markdi",
     "description": "di plugin",
     "type": "meta",
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "markdi\\": "src/"
+            "markdi\\": "src\/",
+            "tests\\_markers\\": "tests\/_markers\/",
+            "tests\\View\\": "tests\/View\/",
+            "tests\\fibers\\": "tests\/fibers\/",
+            "tests\\models\\": "tests\/models\/",
+            "tests\\viewz\\": "tests\/viewz\/"
         }
     },
     "authors": [
@@ -15,13 +20,13 @@
         }
     ],
     "require-dev": {
-        "phpunit/phpunit": "^9.5"
+        "phpunit\/phpunit": "^9.5"
     },
     "bin": [
-        "bin/markdi"
+        "bin\/markdi"
     ],
     "markdi": "tests",
     "require": {
-        "nikic/php-parser": "^4.15"
+        "nikic\/php-parser": "^4.15"
     }
 }
