--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,11 @@
             "tests\\fibers\\": "tests\/fibers\/",
             "tests\\models\\": "tests\/models\/",
             "tests\\viewz\\": "tests\/viewz\/",
-            "tests\\": "tests\/"
+            "tests\\": "tests\/",
+            "test\\": "test\/",
+            "test\\coolers\\": "test\/coolers\/",
+            "test\\os\\": "test\/os\/",
+            "test\\_markers\\": "test\/_markers\/"
         }
     },
     "authors": [
@@ -25,5 +29,5 @@
     "bin": [
         "bin\/markdi"
     ],
-    "markdi": "tests"
+    "markdi": "test"
 }
