--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,8 @@
             "name": "Ilya Shveikin",
             "email": "no_soap_0@mail.ru"
         }
-    ]
+    ],
+    "require-dev": {
+        "phpunit/phpunit": "^10.4"
+    }
 }
