--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "markdi\\": "src\/"
+            "markdi\\": "src\/",
+            "markexample\\": "example\/"
         }
     },
     "authors": [
@@ -14,6 +15,15 @@
             "email": "no_soap_0@mail.ru"
         }
     ],
+    "scripts": {
+        "post-install-cmd": [
+            "chmod +x bin/mark"
+        ],
+        "post-update-cmd": [
+            "chmod +x bin/mark"
+        ]
+    },
+    "bin": ["bin/mark"],
     "require-dev": {
         "phpunit/phpunit": "^10.4"
     }
